--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         } else {
           uname.style.display = "none";
           pword.style.display = "none";
-          loginButton.style.display = "block";
+          loginButton.style.display = "none";
           localStorage.setItem("Role", "Customer");
           cust.style.display = "block";
           admin.style.display = "none";
