--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body background="mountain.jpg">
 
     <div class = "title">
-      <h1 class = "title-content"> Selamat Datang di Acasis Shop Centre  </h1>
+      <h1 class = "title-content"> Acasis Shop Centre  </h1>
       
     </div>
     <div id="root" class="root">
