--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <button onclick="onLogin()" id="loginButton" class="button-group">Login</button>
         <button onclick="showRegisterForm()" id="registerButton" class="button-group">
-          Register
+          Sign In
         </button>
       </div>
 
