--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <button onclick="showRegisterForm()" id="registerButton" class="button-group">
           Sign In
         </button>
+        <p class="text-hint">Belum punya akun? Klik <span class="link" onclick="showRegisterForm()">Sign In</span></p>
       </div>
 
       <!-- Form Register -->
