--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body background="mountain.jpg">
     <div class="title">
-      <h1 class="title-content">Selamat Datang di Acasis Shop Centre</h1>
+      <h1 class="title-content">Acasis Shop Centre</h1>
     </div>
     <div id="root" class="root">
       <div id="login-form" class="form-row">
@@ -28,7 +28,7 @@
         <button onclick="showRegisterForm()" id="registerButton" class="button-group">
           Sign In
         </button>
-        <p class="text-hint">Belum punya akun? Klik <span class="link" onclick="showRegisterForm()">Sign In</span></p>
+        <p class="text-hint">Dont Have an Account? Click <span class="link" onclick="showRegisterForm()">Sign Up</span></p>
       </div>
 
       <!-- Form Register -->
