--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <button onclick="onLogin()" id="loginButton" class="button-group">Login</button>
         <button onclick="showRegisterForm()" id="registerButton" class="button-group">
-          Sign In
+          Sign Up
         </button>
         <p class="text-hint">Dont Have an Account? Click <span class="link" onclick="showRegisterForm()">Sign Up</span></p>
       </div>
